--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,12 @@ body {
 	font-size: .875rem;
 	color: var(--bright-blue);
 	margin-left: auto;
+	transition: opacity 300ms ease;
+}
+
+.plan-link:hover {
+	text-decoration: none;
+	opacity: .5;
 }
 
 .btn-proceed {
@@ -74,9 +80,15 @@ body {
 	font-weight: 700;
 	border-radius: .75em;
 	font-size: 1rem;
-	-webkit-box-shadow: 0px 24px 36px -3px rgba(42, 33, 133, 0.2);
-	-moz-box-shadow: 0px 24px 36px -3px rgba(42, 33, 133, 0.2);
-	box-shadow: 0px 24px 36px -3px rgba(42, 33, 133, 0.2);
+	-webkit-box-shadow: 0px 12px 24px -3px rgba(42, 33, 133, 0.2);
+	-moz-box-shadow: 0px 12px 24px -3px rgba(42, 33, 133, 0.2);
+	box-shadow: 0px 12px 24px -3px rgba(42, 33, 133, 0.2);
+	transition: opacity 300ms ease;
+}
+
+.btn-proceed:hover {
+	opacity: .5;
+	cursor: pointer;
 }
 
 .btn-cancel {
@@ -88,6 +100,12 @@ body {
 	width: 100%;
 	height: 3rem;
 	margin-bottom: 1em;
+	transition: color 300ms ease;
+}
+
+.btn-cancel:hover {
+	cursor: pointer;
+	color: var(--dark-blue);
 }
 
 /* Layout */
@@ -99,11 +117,11 @@ body {
 	height: 90%;
 	width: 95%;
 	border-radius: 1em;
-	overflow: scroll;
 }
 
 .body-container {
 	margin: 0 2em;
+	overflow: scroll;
 }
 
 .main-img {
@@ -134,4 +152,60 @@ body {
 	flex-direction: column;
 	margin-top: 2em;
 	gap: .75em;
+}
+
+/* Media Queries */
+
+@media screen and (min-height: 800px) {
+	.container {
+		height: 72.8%;
+	}
+}
+
+@media screen and (min-height: 1000px) {
+	.container {
+		height: 58.2%;
+	}
+}
+
+@media screen and (min-height: 1200px) {
+	.container {
+		height: 48.5%;
+	}
+}
+
+@media screen and (min-height: 1400px) {
+	.container {
+		height: 41.6%;
+	}
+}
+
+@media screen and (min-height: 1600px) {
+	.container {
+		height: 36.4%;
+	}
+}
+
+@media screen and (min-width: 576px) {
+	.container {
+		width: 75%;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.container {
+		width: 60%;
+	}
+}
+
+@media screen and (min-width: 992px) {
+	.container {
+		width: 35%;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.container {
+		width: 25%;
+	}
 }
